init: inicia o projeto e inicia configuração do prettier

--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "check-types": "turbo run check-types"
   },
   "devDependencies": {
-    "prettier": "^3.5.3",
-    "turbo": "^2.4.4",
-    "typescript": "5.8.2"
+    "turbo": "^2.4.4"
   },
   "engines": {
     "node": ">=18"
@@ -19,6 +17,7 @@
   "packageManager": "npm@10.9.2",
   "workspaces": [
     "apps/*",
+    "config/*",
     "packages/*"
   ]
 }
