--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -2,8 +2,8 @@
   "name": "@saas/auth",
   "version": "0.0.1",
   "private": true,
-  "main": "index.ts",
-  "types": "index.ts",
+  "main": "src/index.ts",
+  "types": "src/index.ts",
   "devDependencies": {
     "@saas/eslint-config": "*",
     "@saas/prettier": "*",
